k8s-manifests/k8s-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-backend
  namespace: devops-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-backend
  template:
    metadata:
      labels:
        app: devops-backend
    spec:
      containers:
      - name: devops-backend
        image: abuzer337/devops-backend:v13
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: devops-backend-service
  namespace: devops-app
spec:
  selector:
    app: devops-backend
  ports:
  - port: 8080
    targetPort: 8080
  type: NodePort
