k8s-manifests/k8s-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-frontend
  namespace: devops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-frontend
  template:
    metadata:
      labels:
        app: devops-frontend
    spec:
      containers:
      - name: devops-frontend
        image: abuzer337/devops-frontend:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: devops-frontend-service
  namespace: devops-app
spec:
  selector:
    app: devops-frontend
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
